Se agrega la información sobre varias etiquetas
Se agregan notas sobre las etiquetas body, h1, head, html, p y
title. Se agregan conceptos importantes como DOCTYPE, html, etiquetas,
archivo index.html y los atributos de etiquetas. Se agrega información
al README.md.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
-<title>Aprendiendo HTML</title>
-
-<h1>Titulo de mi página</h1>
-
-<h2>Este es el subtítulo de mi página</h2>
-
-<p>Este es un parrafo que he escrito en mis prácticas de html</p>
+<!DOCTYPE html> 
+<html>
+    <head>
+        <title>Titulo: Aprendiendo HTML</title>
+    </head>
+    <body>
+        <h1>Encabezado de mi página</h1>
+        <h2>Este es el subtítulo de mi página</h2>
+        <h3>Soy una etiqueta h3</h3>
+        <h4>Soy una etiqueta h4</h4>
+        <h5>Soy una etiqueta h5</h5>
+        <h6>Soy una etiqueta h6</h6>
+        <p>Este es un parrafo que he escrito en mis prácticas de html</p>
+    </body>
+</html>
